displaying weather data in weather display card

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -63,7 +63,7 @@
             background-color: green;
             border: none;
             &:hover{
-                background-color: blue;
+                background-color: #65B0B4;
                 padding: .2rem 1rem;
                 border-radius: .5rem;
             }
